base do jogo only room para PC
base do jogo only room para PC - com SLOPS

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         body { margin: 0%; padding: 0%; background: #000000; }
     </style>
     
-    <script src="phaser.js"></script>        
+    <script src="phaser.js"></script>
     <script src="main.js"></script>
+    <script src="phaser-arcade-slopes.min.js"></script>
 
 </head>
 
